# gcmake-rust

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  gcmake-update-deps  gcmake-update-deps.ps1  gcmake-update-deps.sh  supported_dependencies.yaml
docs/: Docs_Home.md  TEMP_notes_to_make_into_docs.md  TODO.md  cmake_data.md  compile_using_zig.md  cppfront_integration.md  cross_compilation.md  documenting_your_project.md  emscripten.md  linking_information.md  managing_dependency_repos.md  missing_link.md  overview.md  pitfall_list.md  pre_build_scripts.md  predefined_dependency_doc.md  project_structure.md  the_configuration_directory.md  updating_dependency_repos.md  using_ccache.md  using_cuda.md
docs/cmake_data_config/: auto_generated_export_macro_header.md  cmake_data.md  cmake_data_configuration_home.md  data_formats.md  linking.md  root_project_config.md  subproject_config.md  test_project_config.md
some-project/: .clang-format  .clang-tidy  .gitignore  cmake_data.yaml  main.cpp
src/: cli_config.rs  cmake_utils_writer.rs  cmakelists_writer.rs  main.rs
src/cli_config/: clap_cli_config.rs  mod.rs
src/common/: mod.rs  prompt.rs
src/data_types/: mod.rs  raw_types.rs
src/file_writers/: cmake_utils_writer.rs  cmakelists_writer.rs  debian_sh_install_writer.rs  mod.rs
src/item_resolver/: dependency_handling.rs  mod.rs  path_manipulation.rs
src/logger/: mod.rs
src/program_actions/: create_project.rs  manage_dependencies.rs  mod.rs  predef_dep_info_print_funcs.rs  project_info_print_funcs.rs
src/project_generator/: c_file_generation.rs  cpp_file_generation.rs  default_project_config.rs  mod.rs  project_generator_prompts.rs  prompt.rs
src/project_info/: dep_graph_loader.rs  final_dependencies.rs  (+8 more)
(+96 files in other folders)
