[package]
name = "gcmake-rust"
version = "1.5.2"
authors = ["Skylar Cupit <skylarcupit@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.147", features = ["derive"] }
serde_yaml = "0.9.14"
path-clean = "0.1.0"
clap = { version = "4.0.18", features = ["derive"] }
regex = "1.6.0"
lazy_static = "1.4.0"
enum-iterator = "1.2.0"
base64ct = { version = "1.5.3", features = ["alloc"] }
colored = "2.0.0"

[profile.release]
lto = true
strip = true
