[package]
name = "gcmake-rust"
version = "1.6.8"
authors = ["Skylar Cupit <skylarcupit@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.196", features = ["derive"] }
serde_yaml = "0.9.30"
clap = { version = "4.4.18", features = ["derive"] }
regex = "1.10.3"
lazy_static = "1.4.0"
enum-iterator = "1.5.0"
base64ct = { version = "1.6.0", features = ["alloc"] }
colored = "2.1.0"

[profile.release]
lto = true
strip = true
